# bloodaxe

./: .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  bloodaxe.py  bloodaxe_asyncio.py  example.toml  pdf.toml  pyproject.toml  pytest.ini  req.json
.circleci/: config.yml
bloodaxe/: __main__.py
tests/: conftest.py  test_bloodaxe.py
